// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSON Schema generator generates type validator json-schema-draft-7 - array 1`] = `
Object {
  "items": Object {
    "type": "string",
  },
  "type": "array",
}
`;

exports[`JSON Schema generator generates type validator json-schema-draft-7 - boolean 1`] = `
Object {
  "type": "boolean",
}
`;

exports[`JSON Schema generator generates type validator json-schema-draft-7 - boolean constant 1`] = `
Object {
  "const": true,
  "type": "boolean",
}
`;

exports[`JSON Schema generator generates type validator json-schema-draft-7 - boolean constant 2`] = `
Object {
  "const": false,
  "type": "boolean",
}
`;

exports[`JSON Schema generator generates type validator json-schema-draft-7 - integer constant 1`] = `
Object {
  "const": 0,
  "type": "integer",
}
`;

exports[`JSON Schema generator generates type validator json-schema-draft-7 - integer constant 2`] = `
Object {
  "const": 123,
  "type": "integer",
}
`;

exports[`JSON Schema generator generates type validator json-schema-draft-7 - integer constant 3`] = `
Object {
  "const": -1000,
  "type": "integer",
}
`;

exports[`JSON Schema generator generates type validator json-schema-draft-7 - null 1`] = `
Object {
  "type": "null",
}
`;

exports[`JSON Schema generator generates type validator json-schema-draft-7 - number 1`] = `
Object {
  "type": "number",
}
`;

exports[`JSON Schema generator generates type validator json-schema-draft-7 - object 1`] = `
Object {
  "properties": Object {},
  "required": Array [],
  "type": "object",
}
`;

exports[`JSON Schema generator generates type validator json-schema-draft-7 - object 2`] = `
Object {
  "properties": Object {
    "singleField": Object {
      "type": "number",
    },
  },
  "required": Array [
    "singleField",
  ],
  "type": "object",
}
`;

exports[`JSON Schema generator generates type validator json-schema-draft-7 - object 3`] = `
Object {
  "properties": Object {
    "field1": Object {
      "type": "number",
    },
    "field2": Object {
      "type": "string",
    },
    "field3": Object {
      "type": "boolean",
    },
  },
  "required": Array [
    "field1",
    "field2",
  ],
  "type": "object",
}
`;

exports[`JSON Schema generator generates type validator json-schema-draft-7 - string 1`] = `
Object {
  "type": "string",
}
`;

exports[`JSON Schema generator generates type validator json-schema-draft-7 - string constant 1`] = `
Object {
  "const": "some constant",
  "type": "string",
}
`;

exports[`JSON Schema generator generates type validator json-schema-draft-7 - type reference 1`] = `
Object {
  "$ref": "#/definitions/OtherType",
}
`;

exports[`JSON Schema generator generates type validator json-schema-draft-7 - union 1`] = `
Object {
  "oneOf": Array [
    Object {
      "type": "string",
    },
    Object {
      "type": "number",
    },
    Object {
      "type": "boolean",
    },
  ],
}
`;

exports[`JSON Schema generator generates type validator json-schema-draft-7 - void 1`] = `null`;

exports[`JSON Schema generator generates type validator openapi-3 - array 1`] = `
Object {
  "items": Object {
    "type": "string",
  },
  "type": "array",
}
`;

exports[`JSON Schema generator generates type validator openapi-3 - boolean 1`] = `
Object {
  "type": "boolean",
}
`;

exports[`JSON Schema generator generates type validator openapi-3 - boolean constant 1`] = `
Object {
  "const": true,
  "type": "boolean",
}
`;

exports[`JSON Schema generator generates type validator openapi-3 - boolean constant 2`] = `
Object {
  "const": false,
  "type": "boolean",
}
`;

exports[`JSON Schema generator generates type validator openapi-3 - integer constant 1`] = `
Object {
  "const": 0,
  "type": "integer",
}
`;

exports[`JSON Schema generator generates type validator openapi-3 - integer constant 2`] = `
Object {
  "const": 123,
  "type": "integer",
}
`;

exports[`JSON Schema generator generates type validator openapi-3 - integer constant 3`] = `
Object {
  "const": -1000,
  "type": "integer",
}
`;

exports[`JSON Schema generator generates type validator openapi-3 - null 1`] = `
Object {
  "type": "null",
}
`;

exports[`JSON Schema generator generates type validator openapi-3 - number 1`] = `
Object {
  "type": "number",
}
`;

exports[`JSON Schema generator generates type validator openapi-3 - object 1`] = `
Object {
  "properties": Object {},
  "required": Array [],
  "type": "object",
}
`;

exports[`JSON Schema generator generates type validator openapi-3 - object 2`] = `
Object {
  "properties": Object {
    "singleField": Object {
      "type": "number",
    },
  },
  "required": Array [
    "singleField",
  ],
  "type": "object",
}
`;

exports[`JSON Schema generator generates type validator openapi-3 - object 3`] = `
Object {
  "properties": Object {
    "field1": Object {
      "type": "number",
    },
    "field2": Object {
      "type": "string",
    },
    "field3": Object {
      "type": "boolean",
    },
  },
  "required": Array [
    "field1",
    "field2",
  ],
  "type": "object",
}
`;

exports[`JSON Schema generator generates type validator openapi-3 - string 1`] = `
Object {
  "type": "string",
}
`;

exports[`JSON Schema generator generates type validator openapi-3 - string constant 1`] = `
Object {
  "const": "some constant",
  "type": "string",
}
`;

exports[`JSON Schema generator generates type validator openapi-3 - type reference 1`] = `
Object {
  "$ref": "#/components/schemas/OtherType",
}
`;

exports[`JSON Schema generator generates type validator openapi-3 - union 1`] = `
Object {
  "oneOf": Array [
    Object {
      "type": "string",
    },
    Object {
      "type": "number",
    },
    Object {
      "type": "boolean",
    },
  ],
}
`;

exports[`JSON Schema generator generates type validator openapi-3 - void 1`] = `null`;
